force-app/main/default/objects/ScratchOrgAlertEmailItem__c/ScratchOrgAlertEmailItem__c.object-meta.xml
<CustomObject>
    <description>Represent the information for each expiring scratch org in an email.</description>
    <label>Scratch Org Alert Email Item</label>
    <nameField>
        <label>Scratch_Org_Alert_Email_Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scratch Org Alert Email Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>