force-app/main/default/objects/ScratchOrgAlertEmailItem__c/fields/AlmReference__c.field-meta.xml
<CustomField>
    <fullName>AlmReference__c</fullName>
    <label>Alm Reference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>