force-app/main/default/objects/ScratchOrgAlertEmailItem__c/fields/CreatedById__c.field-meta.xml
<CustomField>
    <fullName>CreatedById__c</fullName>
    <label>Created By Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>