force-app/main/default/objects/ScratchOrgAlertEmailItem__c/fields/LastModifiedById__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedById__c</fullName>
    <label>Last Modified By Ids</label>
    <length>80</length>
    <type>Text</type>
</CustomField>