force-app/main/default/objects/ScratchOrgAlertEmailItem__c/fields/LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDate__c</fullName>
    <label>System Modstamp</label>
    <type>DateTime</type>
</CustomField>