force-app/main/default/objects/ScratchOrgAlertEmailItem__c/fields/OrgName__c.field-meta.xml
<CustomField>
    <fullName>OrgName__c</fullName>
    <label>Org Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>