force-app/main/default/objects/ScratchOrgAlertEmailItem__c/fields/ScratchOrg__c.field-meta.xml
<CustomField>
    <fullName>ScratchOrg__c</fullName>
    <label>Scratch Org</label>
    <length>80</length>
    <type>Text</type>
</CustomField>