force-app/main/default/objects/ScratchOrgAlertEmailItem__c/fields/ScratchOrgAlertEmail__c.field-meta.xml
<CustomField>
    <fullName>ScratchOrgAlertEmail__c</fullName>
    <description>The alert email that this email item is a part of.</description>
    <label>Scratch Org Alert Email</label>
    <referenceTo>ScratchOrgAlertEmail__c</referenceTo>
    <relationshipLabel>Scratch Org Alert Email Items</relationshipLabel>
    <relationshipName>Scratch_Org_Alert_Email_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>