force-app/main/default/objects/ScratchOrgAlertEmailItem__c/fields/ScratchOrgInfoId__c.field-meta.xml
<CustomField>
    <fullName>ScratchOrgInfoId__c</fullName>
    <label>Scratch Org Info Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>