force-app/main/default/objects/ScratchOrgAlertEmailItem__c/fields/SignupEmail__c.field-meta.xml
<CustomField>
    <fullName>SignupEmail__c</fullName>
    <label>Signup Email</label>
    <type>Email</type>
</CustomField>