force-app/main/default/objects/ScratchOrgAlertEmailItem__c/fields/SignupInstance__c.field-meta.xml
<CustomField>
    <fullName>SignupInstance__c</fullName>
    <label>Signup Instance</label>
    <length>80</length>
    <type>Text</type>
</CustomField>