force-app/main/default/objects/ScratchOrgAlertEmailItem__c/fields/SignupTrialDays__c.field-meta.xml
<CustomField>
    <fullName>SignupTrialDays__c</fullName>
    <label>Signup Trial Days</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>