force-app/main/default/objects/ScratchOrgAlertEmailItem__c/fields/SignupUsername__c.field-meta.xml
<CustomField>
    <fullName>SignupUsername__c</fullName>
    <label>Signup Username</label>
    <length>80</length>
    <type>Text</type>
</CustomField>