force-app/main/default/objects/ScratchOrgAlertEmailItem__c/fields/SystemModstamp__c.field-meta.xml
<CustomField>
    <fullName>SystemModstamp__c</fullName>
    <label>System Modstamp</label>
    <type>DateTime</type>
</CustomField>